# Quadruped-Robot

./: CMakeLists.txt  JoystickInterface.py  README.md  RobotRunner.cpp  RobotRunner.h  cppTypes.h  main.cpp  readme.txt  robot_settings.h  walking_simulation.py  walking_simulation_without_joystick.py  walking_simulation_without_joystickwithout_joystick.py
Controllers/: ContactEstimator.h  DesiredStateCommand.h  LegController.cpp  LegController.h  OrientationEstimator.cpp  OrientationEstimator.h  PositionVelocityEstimator.cpp  PositionVelocityEstimator.h  RobotLegState.h  StateEstimatorContainer.h
Controllers/WBC_Ctrl/: WBC_Ctrl.cpp  WBC_Ctrl.h
Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyOriTask.hpp  BodyPosTask.cpp  BodyPosTask.hpp  Task.hpp  (+5 more)
Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  FootSwingTrajectory.cpp  FootSwingTrajectory.h  Gait.cpp  Gait.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  common_types.h  convexMPC_interface.cpp  convexMPC_interface.h
Dynamics/: A1.h  ActuatorModel.h  Anymal_b.h  FloatingBaseModel.cpp  FloatingBaseModel.h  MiniCheetah.h  Quadruped.cpp  Quadruped.h  SpatialInertia.h  Spot.h
FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h  SafetyChecker.cpp  TransitionData.h
Math/: MathUtilities.h  orientation_tools.h
Utilities/: BSplineBasic.h  IMUTypes.h  pseudoInverse.h
quadruped_model/a1/: a1.urdf
quadruped_model/anymal_b/: anymal.xml
quadruped_model/anymal_c/: anymal.xml
quadruped_model/bosdyn_spot/: model.sdf  model.xml
quadruped_model/laikago/: laikago_toes_zup.urdf  laikago_toes_zup.xml
quadruped_model/mini_cheetah/: mini_cheetah2.urdf
quadruped_model/mini_cheetah_rebuild/: quadruped.xml
quadruped_model/slope/: slope.STL  slope.xml  slope2.STL  零件1.SLDPRT  零件1.STL
test/: load_test.py
(+20 files in other folders)
